discussion/kv_engine/156693/156693_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46853: Include frameExtras in Request bodyLen validation

Cherry-pick for 7.0.0.

FrameExtraslen was erroneously not included when validating that all
the expected fields fit within the received bodyLen.

Change-Id: I0fd164fc1eee087d364292903dcc8a5a3a81f062

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-06-30 11:47:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2021-06-30 11:47:41.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/248679/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-30 12:13:35.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/118/ : FAILURE

Compile error at ..\kv_engine\tests\testapp\testapp_misc.cc(242): error C3861: "BarrierFrameInfo": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/118/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/63/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_misc.cc:242:22: error: use of undeclared identifier "BarrierFrameInfo" [clang-diagnostic-error]
        addFrameInfo(BarrierFrameInfo());
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_misc.cc:243:22: error: use of undeclared identifier "BarrierFrameInfo" [clang-diagnostic-error]
        addFrameInfo(BarrierFrameInfo());
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/63/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: use of undeclared identifier "BarrierFrameInfo" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/63/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/72/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: use of undeclared identifier "BarrierFrameInfo"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/72/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.0.0/5/ : FAILURE

Compile error at [2021-06-30T12:09:29.820Z] ../kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: ?BarrierFrameInfo? was not declared in this scope; did you mean ?addFrameInfo??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.0.0/5/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.0.0/5/ : FAILURE

Compile error at [2021-06-30T11:49:49.778Z] ../kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: use of undeclared identifier "BarrierFrameInfo"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.0.0/5/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/7.0.0/5/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.0.0/5/ : FAILURE

Compile error at [2021-06-30T12:07:20.801Z] ../kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: ?BarrierFrameInfo? was not declared in this scope; did you mean ?addFrameInfo??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.0.0/5/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.0.0/5/ : FAILURE

Compile error at [2021-06-30T12:01:26.916Z] ../kv_engine/tests/testapp/testapp_misc.cc:242:22:
error: use of undeclared identifier "BarrierFrameInfo"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.0.0/5/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8932/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
